--- a/ESCenter.Administrator/Views/Course/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Course/Edit.cshtml
@@ -9,7 +9,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    List<string> genders = EnumProvider.Genders;
+    List<string> genders = EnumProvider.GenderFilters;
     List<string> academics = EnumProvider.AcademicLevels;
     List<string> learningModes = EnumProvider.LearningModes;
     List<string> statuses = EnumProvider.StatusWithoutConfirmed;
