--- a/ESCenter.Administrator/Views/Tutor/_UserInfo.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/_UserInfo.cshtml
@@ -4,7 +4,7 @@
 @model ESCenter.Admin.Application.Contracts.Users.Learners.LearnerForCreateUpdateDto
 
 @{
-    List<string> genders = EnumProvider.Genders;
+    List<string> genders = EnumProvider.GenderFilters;
     Layout = "_ScriptLayout";
 }
 
