--- a/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Application.Accounts.Queries.GetUserProfile.UserProfileDto
 @{
-    var genders = EnumProvider.Genders;
+    var genders = EnumProvider.GenderFilters;
 }
 <!-- Profile Edit Form -->
 
