--- a/ESCenter.Administrator/Views/Staff/Create.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Create.cshtml
@@ -39,7 +39,7 @@
 
                     @foreach (string i in genders)
                     {
-                        @if (i != Model.Gender.ToString())
+                        @if (i != Model.Gender)
                         {
                             <option> @i </option>
                         }
@@ -50,7 +50,6 @@
             <div class="col-md-4">
                 <label asp-for="Role" class="form-label">Role</label>
                 <select asp-for="Role" class="form-select">
-                    <option selected>@Model.Role</option>
                     <option> @Role.Admin.ToString() </option>
                 </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
@@ -61,7 +60,6 @@
 
                 <span asp-validation-for="BirthYear" class="text-danger"></span>
             </div>
-
             <div class="col-md-6">
                 <label asp-for="Email" class="form-label">Email</label>
                 <div class="col-sm-12">
@@ -69,31 +67,24 @@
                 </div>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-
             <div class="col-md-6">
                 <label asp-for="PhoneNumber" class="form-label">Number</label>
                 <div class="col-sm-12">
                     <input type="tel" asp-for="PhoneNumber" class="form-control">
                 </div>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-
             </div>
-
             <div class="col-6">
                 <label asp-for="City" class="form-label">City</label>
                 <input type="text" class="form-control" asp-for="City" placeholder="Sai Gon"/>
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
-
             <div class="col-6">
                 <label asp-for="Country" class="form-label">Country</label>
                 <input type="text" class="form-control" asp-for="Country" placeholder="Viet Nam"/>
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <!-- address advanced set up----------------------------------- -->
-
-            <!-- ----------------------------------- -->
-
             <div class="col-12">
                 <div class="form-floating">
                     <textarea class="form-control" placeholder="Address" asp-for="Description" style="height: 100px;"></textarea>
@@ -102,10 +93,7 @@
 
                 </div>
             </div>
-
             <!-- ----------------------------------- hidden info -->
-
-
             <input type="hidden" asp-for="Id" value="@Guid.NewGuid()"/>
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
