--- a/ESCenter.Administrator/Views/Subject/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Subject/Edit.cshtml
@@ -8,7 +8,7 @@
     <button type="button" class="btn-close" data-bs-toggle="collapse" id="successAlertButton" data-bs-target="#successAlert" aria-expanded="false" aria-controls="successAlert" aria-label="Close"></button>
 </div>
 
-
+ 
 <hr />
 <div class="card">
     <div class="card-body">
@@ -44,8 +44,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <a type="reset" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
-                <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+                <a type="reset" asp-action="Index" class="btn btn-secondary">Back to list</a>
             </div>
             @Html.AntiForgeryToken()
         </form><!-- End Multi Columns Form -->
