--- a/ESCenter.Client/Views/Authentication/Register.cshtml
+++ b/ESCenter.Client/Views/Authentication/Register.cshtml
@@ -6,7 +6,7 @@
 @{
     Layout = "_LoginLayout";
     bool isFail = ViewBag.isFail ?? false;
-    var genders = EnumProvider.Genders;
+    var genders = EnumProvider.GenderFilters;
 }
 
 <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
