--- a/ESCenter.Client/Views/Tutor/Detail.cshtml
+++ b/ESCenter.Client/Views/Tutor/Detail.cshtml
@@ -65,7 +65,7 @@
                 <div class="form-group mt-3">
                     <textarea class="form-control" name="requestMessage" placeholder="Type your detail request"></textarea>
                 </div>
-                <button class="btn btn-primary" type="submit">Request</button>
+                <button class="btn btn-primary" style="background-color: #2eca6a" type="submit">Request</button>
             </form>
             }
             
