--- a/ESCenter.Client/Views/Tutor/Index.cshtml
+++ b/ESCenter.Client/Views/Tutor/Index.cshtml
@@ -32,11 +32,11 @@
 <section id="trainers" class="trainers">
     <div class="container" data-aos="fade-up">
         <form class="row pb-3" asp-action="Index" asp-controller="Tutor" method="get">
-            <div class="col-lg-3 col-sm-3 p-0 pe-2 d-flex align-items-stretch">
+            <div class="col-lg-4 col-sm-4 p-0 pe-2 d-flex align-items-stretch">
                 <input class="form-control" placeholder="Type a subject" value="@subject" type="text" name="subjectName">
             </div>
 
-            <div class="col-lg-2 col-sm-2 p-0 pe-2 d-flex align-items-stretch">
+            <div class="col-lg-3 col-sm-3 p-0 pe-2 d-flex align-items-stretch">
 
                 <select name="gender" class="form-select">
                     @if (currentGender is null)
@@ -80,11 +80,9 @@
                 </select>
             </div>
 
-            <div class="col-lg-2 col-sm-2 p-0 pe-2 d-flex align-items-stretch">
-                <input class="form-control" placeholder="Address" value="@currentAddress" type="text" name="address">
-            </div>
+                <input class="form-control" placeholder="Address" value="@currentAddress" hidden="hidden" type="text" name="address">
 
-            <div class="col-lg-1 col-sm-1 p-0 d-flex">
+            <div class="col-lg col-sm p-0 d-flex">
                 <button class="form-control btn btn-primary" style="background-color:#5fcf80;" type="submit">Search</button>
             </div>
         </form>
@@ -94,7 +92,7 @@
             {
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="@i.Avatar" class="img-fluid" alt="" style="height:450px;">
+                        <img src="@i.Avatar" class="img-fluid" alt="" style="height:450px; object-fit: cover">
                         @* <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt=""> *@
 
                         <div class="member-content">
