fix bugs and update tutoring requests for web client

--- a/ESCenter.Administrator/Views/Profile/Index.cshtml
+++ b/ESCenter.Administrator/Views/Profile/Index.cshtml
@@ -44,9 +44,9 @@
                             <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                         </li>
 
-                        <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" id ="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button>
-                        </li>
+                        @* <li class="nav-item"> *@
+                        @*     <button class="nav-link" data-bs-toggle="tab" id ="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button> *@
+                        @* </li> *@
 
                         <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password" id ="profile-change-password-button">Change Password</button>
