--- a/ESCenter.Client/Views/TutorProfile/Index.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/Index.cshtml
@@ -42,15 +42,15 @@
                         </li>
 
                         <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#teaching-class">Your course requests</button>
+                            <button class="nav-link" style="color: #2eca6a" data-bs-toggle="tab" data-bs-target="#teaching-class">Your course requests</button>
                         </li>
 
                         <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#payments">Payments</button>
+                            <button class="nav-link" style="color: #2eca6a" data-bs-toggle="tab" data-bs-target="#payments">Payments</button>
                         </li>
 
                         <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#verification">Verifications</button>
+                            <button class="nav-link" style="color: #2eca6a" data-bs-toggle="tab" data-bs-target="#verification">Verifications</button>
                         </li>
                     </ul>
                     <div class="tab-content pt-2">
