--- a/ESCenter.Client/Views/TutorProfile/_AllVerificationRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllVerificationRequests.cshtml
@@ -39,7 +39,7 @@
                 $gallery.empty();
             }
             ResetUploadComponent()">Refresh</button>
-            <button class="btn btn-primary" type="submit">Request to change verification</button>
+            <button class="btn btn-primary" style="color: #2eca6a" type="submit">Request to change verification</button>
         </form>
 
     </div>
