--- a/ESCenter.Client/Views/TutorProfile/_MakePayment.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_MakePayment.cshtml
@@ -12,6 +12,7 @@
 
         <button type="button"
                 class="btn btn-primary"
+                style="color: #2eca6a"
                 onclick="makePayment('@Url.Action("SetAsPaid", "TutorProfile", new { id = Model.PaymentId })');">
             Make payment
         </button>
