--- a/ESCenter.Client/Views/Authentication/ChangePassword.cshtml
+++ b/ESCenter.Client/Views/Authentication/ChangePassword.cshtml
@@ -17,7 +17,8 @@
             </div>
 
             <div class="text-center">
-                <button type="submit" class="btn btn-primary">Change Password</button>
+                
+                <button type="submit" class="btn btn-primary" style="color: #2eca6a">Change Password</button>
             </div>
         </div>
 
