--- a/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
@@ -28,7 +28,8 @@
     </div>
 
     <div class="text-center">
-        <button type="submit" class="btn btn-primary">Change Password</button>
+        style="color: #2eca6a"
+        <button type="submit" class="btn btn-primary" >Change Password</button>
     </div>
 </form>
 
