add space between first and lt name

--- a/ESCenter.Client/Views/Course/Index.cshtml
+++ b/ESCenter.Client/Views/Course/Index.cshtml
@@ -43,7 +43,7 @@
                         <p>@i.Description</p>
                         <div class="trainer d-flex justify-content-between align-items-center">
                             <ul class="row requestList">
-                                <li class="col-sm-4"><i class="far fa-clock text-danger mr-10"></i> <b>Created:</b> 14:10 16.05.2023</li>
+                                <li class="col-sm-4"><i class="far fa-clock text-danger mr-10"></i> <b>Created:</b> @i.CreationTime.ToString("dd/MM/yyyy")</li>
 
                                 <li class="col-sm-4">
                                     <i class="fas fa-transgender text-danger mr-10"></i> <b>Gender Requirements:</b>
