--- a/ESCenter.Client/Views/Profile/_AllLearningClass.cshtml
+++ b/ESCenter.Client/Views/Profile/_AllLearningClass.cshtml
@@ -34,7 +34,7 @@
                     <td>@classIn.Status</td>
 
                     <td>
-                        <button type="button" class="btn btn-primary" onclick="OpenGetDialog('@Url.Action("GetLearningClass", "Profile", new { courseId = @classIn.Id })','Detail');">
+                        <button type="button" style="background-color: #2eca6a" class="btn btn-primary" onclick="OpenGetDialog('@Url.Action("GetLearningClass", "Profile", new { courseId = @classIn.Id })','Detail');">
                             Detail
                         </button>
                     </td>
