--- a/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
@@ -28,8 +28,7 @@
     </div>
 
     <div class="text-center">
-        style="color: #2eca6a"
-        <button type="submit" class="btn btn-primary" >Change Password</button>
+        <button type="submit" style="background-color: #2eca6a" class="btn btn-primary" >Change Password</button>
     </div>
 </form>
 
