--- a/ESCenter.Client/Views/TutorProfile/Index.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/Index.cshtml
@@ -38,11 +38,11 @@
                     <!-- Bordered Tabs -->
                     <ul class="nav nav-tabs nav-tabs-bordered">
                         <li class="nav-item active">
-                            <button class="nav-link active" data-bs-toggle="tab" id="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button>
+                            <button class="nav-link active" style="color: #2eca6a" data-bs-toggle="tab" id="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button>
                         </li>
 
                         <li class="nav-item">
-                            <button class="nav-link" style="color: #2eca6a" data-bs-toggle="tab" data-bs-target="#teaching-class">Your course requests</button>
+                            <button class="nav-link" style="color: #2eca6a" data-bs-toggle="tab" data-bs-target="#teaching-class">Your teaching requests</button>
                         </li>
 
                         <li class="nav-item">
