--- a/ESCenter.Client/Views/TutorProfile/_ProfileTutorEdit.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_ProfileTutorEdit.cshtml
@@ -69,7 +69,7 @@
 
         </div>
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary" style="background-color: #2eca6a" type="submit">Submit</button>
 </form>
 
 <!-- End Profile Edit Form -->
