--- a/ESCenter.Client/Views/Authentication/Login.cshtml
+++ b/ESCenter.Client/Views/Authentication/Login.cshtml
@@ -34,8 +34,6 @@
                                 }
                             </div>
 
-
-
                         <form class="row g-3 needs-validation" asp-action="Login" asp-controller="Authentication">
 
                                 <div class="col-12">
@@ -53,14 +51,8 @@
                                     <div class="invalid-feedback">Please enter your password!</div>
                                 </div>
 
-                                <div class="col-12" hidden>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                                        <label class="form-check-label" for="rememberMe">Remember me</label>
-                                    </div>
-                                </div>
                                 <div class="col-12">
-                                    <button class="btn btn-primary w-100" type="submit">Login</button>
+                                    <button class="btn btn-primary w-100" type="submit" style="background-color: #2eca6a" >Login</button>
                                 </div>
                                 <div class="col-12">
                                     <p class="small mb-0">Don't have account? <a asp-controller="Authentication" asp-action="Register">Create an account</a></p>
