--- a/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
@@ -125,7 +125,7 @@
     <input type="hidden" asp-for="Id"/>
 
     <div class="text-center">
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <button type="submit" class="btn btn-primary" style="background-color: #2eca6a" >Save Changes</button>
     </div>
 </form>
 
