--- a/ESCenter.Client/Views/TutorProfile/_MakePayment.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_MakePayment.cshtml
@@ -12,9 +12,9 @@
 
         <button type="button"
                 class="btn btn-primary"
-                style="color: #2eca6a"
+                style="background-color: #2eca6a"
                 onclick="makePayment('@Url.Action("SetAsPaid", "TutorProfile", new { id = Model.PaymentId })');">
-            Make payment
+            Confirm
         </button>
 
     </div>
