fix drag drop component

--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -9,9 +9,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - Center Of Education And Development</title>
+    <title>Center Of Education And Development</title>
 
     <!-- Favicons -->
     <link href="~/assets/img/favicon.png" rel="icon">
@@ -311,8 +312,8 @@
 <script src="~/assets/vendor/aos/aos.js"></script>
 <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="~/assets/vendor/php-email-form/validate.js"></script>
-<script src="~/simple-datatables/simple-datatables.js"></script>
 <script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
+<script src="~/simple-datatables/simple-datatables.js"></script>
 
 <!--Start of Fchat.vn--><script type="text/javascript" src="https://cdn.fchat.vn/assets/embed/webchat.js?id=6680183acb4b7b35ff4b121b" async="async"></script><!--End of Fchat.vn-->
 
