--- a/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
@@ -15,6 +15,7 @@
                 <th scope="col">Title</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Status</th>
+                <th data-sortable="false" scope="col" >Actions</th>
             </tr>
             </thead>
             <tbody>
