--- a/ESCenter.Client/Views/TutorProfile/_UploadComponent.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_UploadComponent.cshtml
@@ -1,15 +1,4 @@
-﻿<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-</head>
-<body>
-
-<div class="container mt-5">
+﻿<div class="container mt-5">
   <div class="card">
     <div class="card-body">
       <div id="drop-area" class="border rounded d-flex justify-content-center align-items-center"
@@ -90,5 +79,3 @@
     }
   }
 </script>
-</body>
-</html>
