--- a/ESCenter.Administrator/Views/Home/Index.cshtml
+++ b/ESCenter.Administrator/Views/Home/Index.cshtml
@@ -284,7 +284,7 @@
         </div>
 
         <div class="card-body pb-0">
-            <h5 class="card-title">Latest Tutor Requests </h5>
+            <h5 class="card-title">Latest Tutoring Requests </h5>
 
             <table id="example" class="table datatable">
                 <thead>
