--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
 
         <li class="nav-item">
             <a class="nav-link collapsed">
-                <i class="bi bi-card-list"></i><span>Tutor Requests</span>
+                <i class="bi bi-card-list"></i><span>Tutoring Requests</span>
             </a>
 
             <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
