--- a/ESCenter.Client/Views/Authentication/Register.cshtml
+++ b/ESCenter.Client/Views/Authentication/Register.cshtml
@@ -102,7 +102,7 @@
                             </div>
 
                             <div class="col-12">
-                                <button class="btn btn-primary w-100" type="submit">Create Account</button>
+                                <button class="btn btn-primary w-100" style="background-color: #2eca6a" type="submit">Create Account</button>
                             </div>
                             <div class="col-12">
                                 <p class="small mb-0">Already have an account? <a asp-controller="Authentication" asp-action="Index">Log in</a></p>
